Add textColor setting

--- a/i18n/default.json
+++ b/i18n/default.json
@@ -7,7 +7,8 @@
   "nameTags.toggle.renderChild.description": "Name tag render child",
   "nameTags.toggle.renderVillager": "Villager",
   "nameTags.toggle.renderVillager.description": "Name tag render villager",
-  "nameTags.name": "Name",
+  "nameTags.button.nameTagColor": "Name tag color",
+  "nameTags.button.nameTagColor.description": "Name tag render color",
   "nameTags.hp": "HP",
   "nameTags.damage": "Damage",
   "nameTags.friendship": "Friendship",
