--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -7,7 +7,8 @@
   "nameTags.toggle.renderChild.description": "名称标签渲染儿童",
   "nameTags.toggle.renderVillager": "村民",
   "nameTags.toggle.renderVillager.description": "名称标签渲染村民",
-  "nameTags.name": "名字",
+  "nameTags.button.nameTagColor": "名称标签颜色",
+  "nameTags.button.nameTagColor.description": "名字标签渲染的颜色",
   "nameTags.hp": "血量",
   "nameTags.damage": "攻击",
   "nameTags.friendship": "友好度",
